--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.0.1'
     api 'net.eusashead.mqtt:rxmqtt:1.2.0.RELEASE'
+    implementation 'com.google.code.gson:gson:2.8.4'
 }
