--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,11 @@ android {
     }
     buildToolsVersion '28.0.3'
 }
+
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -33,7 +38,7 @@ dependencies {
     api 'net.eusashead.mqtt:rxmqtt:1.2.0.RELEASE'
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation 'net.danlew:android.joda:2.9.9.4'
-    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     api 'org.apache.httpcomponents:httpcore:4.4.+'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
