--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildToolsVersion '29.0.2'
+    namespace 'pitko.erik.homecontrol'
 }
 
 repositories {
@@ -29,13 +29,12 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.12'
     api 'net.eusashead.mqtt:rxmqtt:1.2.0.RELEASE'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'net.danlew:android.joda:2.10.6'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     api 'org.apache.httpcomponents:httpcore:4.4.13'
